# kevinfoo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  render.yaml  run.sh  tarpaulin.toml
cmd/server/: main.go
internal/auth/: handler.go  session.go
internal/bookmark/: bookmark.go  handler.go  mongo_repository.go  repository.go  service.go  sqlite_repository.go
internal/config/: config.go
internal/database/: mongo.go  sqlite.go
internal/database/migrations/: 0001_create_bookmarks.sql
internal/server/: server.go
internal/web/: render.go
internal/web/templates/: bookmarks.html  home.html  index.html  jwt-decoder.html  login.html
internal/web/templates/partials/: bookmark-delete-confirm.html  bookmark-form.html  bookmark-list.html  bookmark-modal.html  bookmark-row.html
src/: main.rs
src/api/: game_handler.rs  jwt_handler.rs  mod.rs  note_handler.rs  task_handler.rs
src/models/: game.rs  mod.rs  multiplayer_game.rs  note.rs  task.rs
src/repository/: note_repository.rs  task_repository.rs
src/services/: note_service.rs  task_service.rs
static/: .gitkeep
templates/: README.md  _action_sheet.html  _delete_confirm.html  _modal_form.html  base.html  dashboard.html  index.html  jwt.html  jwt_result.html  note_edit_form.html  note_list.html  notes.html  task_list.html  tictactoe.html  tictactoe_board.html  tictactoe_board_online.html  tictactoe_online_setup.html
web/static/css/: input.css
